# ComputerVisionTasks

./: README.md
cloth-seg/: .gitignore  README.md  REPORT.md  callbacks.py  config.py  data_prep.py  infer.py  loader.py  main.py  model.py  notebook.ipynb  pyproject.toml  train.py
face-match-age/: .gitignore  README.md  REPORT.md  callbacks.py  config.py  data_prep.py  infer.py  loader.py  model.py  notebook.ipynb  pyproject.toml  train.py
testing-styleclip/: README.md  config.py  infer.py  requirements copy.txt  setup_models.py
testing-styleclip/lib/style_clip_pytorch/: configs.py  embedding.py  manipulator.py  wrapper.py
