[project]
name = "face-match-age"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "py-spy>=0.4.1",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
